<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCitaActivityP">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registrar cita"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_confirmar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:elevation="8dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            app:contentPadding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Medico" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/menu3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/labelMedico">

                    <AutoCompleteTextView
                        android:id="@+id/spnMedico"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Fecha para la cita" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/labelFecha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Hora de Atencion" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/menu4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/labelAtencion">

                    <AutoCompleteTextView
                        android:id="@+id/spnAtencion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button

                    android:id="@+id/btn_confirmar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="25dp"
                    android:backgroundTint="@color/btn_color"
                    android:drawableRight="@drawable/ic_send"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:text="Confirmar">

                </Button>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardCornerRadius="10dp"
            android:elevation="8dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            app:contentPadding="12dp">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Descripcion de sintomas" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:hint="@string/labelSintoma"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSintomas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="Especialidad" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/menu"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:hint="@string/labelEspecialidad">

                        <AutoCompleteTextView
                            android:id="@+id/spnEspecialidad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="Tipo de consulta" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/menuconsulta"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:hint="@string/labelConsulta">

                        <AutoCompleteTextView
                            android:id="@+id/spnConsulta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button

                        android:id="@+id/btn_siguiente"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="25dp"
                        android:backgroundTint="@color/btn_color"
                        android:drawableRight="@drawable/ic_send"
                        android:paddingLeft="60dp"
                        android:paddingRight="60dp"
                        android:text="Siguiente">

                    </Button>


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>